IndexedDB: WAL file keeps growing https://bugs.webkit.org/show_bug.cgi?id=191294 <rdar://problem/41333493>

Reviewed by Chris Dumez.

Source/WebCore:

When we quit apps, the database connection may not be shut down properly, and WAL file will be retained on disk.
On the next open of database connection, new logs will be appended to the original WAL file, which keeps
increasing size of the WAL file. We should do a manual checkpoint when we open a IndexedDB to make sure previous
log is written to database and truncate WAL file.

Test: IndexedDB.IndexedDBTempFileSize

* platform/sql/SQLiteDatabase.cpp:
(WebCore::SQLiteDatabase::open):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/IndexedDBTempFileSize-1.html: Added.
* TestWebKitAPI/Tests/WebKitCocoa/IndexedDBTempFileSize-2.html: Added.
* TestWebKitAPI/Tests/WebKitCocoa/IndexedDBTempFileSize.mm: Added.
(-[IndexedDBFileSizeMessageHandler userContentController:didReceiveScriptMessage:]):
(TEST):


Canonical link: https://commits.webkit.org/206125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237882 268f45cc-cd09-0410-ab3c-d52691b4dbfc